# dbx

./: Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: ci.yml
apps/desktop/src/components/editor/: AiAssistant.vue  EditorSettingsDialog.vue  QueryHistory.vue
apps/desktop/src/components/grid/: DataGrid.vue
apps/desktop/src/components/redis/: RedisKeyBrowser.vue
apps/desktop/src/components/sidebar/: TreeItem.vue
apps/desktop/src/i18n/locales/: en.ts  es.ts  it.ts  ja.ts  pt-BR.ts  zh-CN.ts  zh-TW.ts
apps/desktop/src/lib/: connectionUrl.ts  dataGridSql.ts  databaseTableDataCapabilities.ts  databaseTree.ts  formatBytes.ts  tableEditing.ts
apps/desktop/src/stores/: settingsStore.ts
apps/desktop/src/types/: database.ts
crates/dbx-core/: Cargo.toml
crates/dbx-core/src/: agent_manager.rs  connection.rs  mongo_ops.rs  query.rs  schema.rs  types.rs
crates/dbx-core/src/db/: clickhouse_driver.rs  influxdb_driver.rs  mod.rs  mongo_driver.rs  mysql.rs  ob_oracle.rs  postgres.rs  rqlite_driver.rs  sqlite.rs  sqlserver.rs  ssh_tunnel.rs  turso_driver.rs
crates/dbx-core/src/models/: connection.rs
crates/dbx-core/src/schema/: duckdb_metadata.rs
src-tauri/: tauri.conf.json
src-tauri/src/commands/: agents.rs  connection.rs
src/components/connection/: ConnectionDialog.vue
src/components/icons/: DatabaseIcon.vue
src/lib/: databaseCapabilities.ts
src/stores/: connectionStore.ts
src/types/: database.ts
