[workspace]
resolver = "2"
members = ["src-tauri", "crates/dbx-core", "crates/dbx-web"]

[patch.crates-io]
tokio-postgres = { git = "https://github.com/t8y2/tokio-postgres-gaussdb.git", branch = "master" }
postgres-types = { git = "https://github.com/t8y2/tokio-postgres-gaussdb.git", branch = "master" }
postgres-protocol = { git = "https://github.com/t8y2/tokio-postgres-gaussdb.git", branch = "master" }

[profile.release]
panic = "abort"
strip = true
lto = "thin"
codegen-units = 1
opt-level = "s"
